--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <center>
   <h3 class="btn btn-info heading">Font Manipulator
     <br>
-    <span class="note">NOTE - Get your left and right wrist closer 
+    <span class="note">Note - Get your left and right wrist closer 
       to reduce the size of the Font and to increase the size of 
       the Font keep your left and right wrist far from each other. 
-      Move your nose to move the font </span>
+       </span>
     <br>
 
   </h3>
@@ -29,6 +29,6 @@
     <div class="copy_right_footer">
       Developed By Zhalhou Kense
     </div>
-    
+    <script src='main.js'></script>
 </body>
 </html>
